# washington-fish-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  go.mod  go.sum  sqlc.yaml
cmd/wfa-api/: main.go
cmd/wfa-worker/: main.go
deploy/: README.md
deploy/cron-manager/: schedules.json
internal/api/: api.go  docs.go  lakes.go  openapi.yaml
internal/astro/: astro.go  astro_test.go
internal/config/: config.go
internal/httpx/: httpx.go  httpx_test.go
internal/ingest/fishwa/: fishwa.go
internal/ingest/stations/: client.go  stations.go
internal/ingest/stocking/: client.go  stocking.go
internal/ingest/wdfwlakes/: client.go  wdfwlakes.go
internal/ingest/weather/: client.go  weather.go  weather_test.go
internal/predict/: predict.go
internal/predict/bite/: bite.go  bite_test.go
internal/predict/species/: species.go  species_test.go
internal/store/: conditions.go  lakes.go  lakes_query.go  migrate.go  presence.go  rank.go  stations.go  store.go
internal/store/db/: lakes.sql.go  models.go  predict.sql.go  stocking.sql.go
internal/store/migrations/: 00001_init.sql  00002_lakes_geocode.sql  00003_lake_type.sql  00004_lake_confidence.sql  00005_presence_fishwa_source.sql  embed.go
internal/store/queries/: lakes.sql  predict.sql  stocking.sql
internal/telemetry/: telemetry.go
internal/weather/field/: field.go  field_test.go
internal/weather/ked/: ked.go
internal/weather/proj/: proj.go  proj_test.go
tools/variogram-fit/: README.md  fit.py  pyproject.toml  viz.py
